--- a/index.html
+++ b/index.html
@@ -31,32 +31,25 @@
     </section> -->
 
     <!-- 双飞翼布局 -->
-    <section class="s-main">
+    <!-- <section class="s-main">
         <div class="center">
             <div class="content">s-center</div>
         </div>
         <div class="left">s-left</div>
         <div class="right">s-right</div>
-    </section>
+    </section> -->
 
+    <!-- less变量 -->
     <div class="images-bg"></div>
 
 
     <!-- flex实现 -->
-    <section class="flex-main">
+    <!-- <section class="flex-main">
         <div class="left"></div>
         <div class="content"></div>
         <dic class="right"></dic>
-    </section>
+    </section> -->
 
-
-
-    <!-- flex移动端应用 -->
-    <div class="m-main">
-        <header>头部</header>
-        <div class="content">中间部分</div>
-        <footer>底部</footer>
-    </div>
 </body>
 
 </html>
