--- a/animation.html
+++ b/animation.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./animation.min.css">
 </head>
 <body>
-    <div id="svg1">
-        <embed src="./baidu34-36(svg-canvas)/column.svg" id="embed" width="640" height="400"
-            type="image/svg+xml">
-    </div>
+    <div class="g-container">
+    <div class="word">准</div>
+    <div class="word">备</div>
+    <div class="word">好</div>
+    <div class="word">了吗！</div>
+</div>
 </body>
 </html>
